--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
 		</script>
 		
 		<script src="https://d3js.org/d3.v4.min.js"></script>
-		<script type="text/javascript" src="d3-tip/index.js"></script>
+		<script type="text/javascript" src="d3-tip.js"></script>
 
 		<style>
 		body {
@@ -25,14 +25,14 @@
 
 		</style>
 
-		<link rel="stylesheet" type="text/css" href="css/paperbuzzviz.css" />
+		<link rel="stylesheet" type="text/css" href="../assets/css/paperbuzzviz.css" />
     </head>
 	<body>
 	<h1>Paperbuzz Visualizations</h1>
 
 	<div id="paperbuzz"><div id="loading">Metrics Loading...</div></div>
 
-    <script type="text/javascript" src="paperbuzzviz.js"></script>
+    <script type="text/javascript" src="../paperbuzzviz.js"></script>
 	
     <script type="text/javascript">
 		var options = {
